src/components/navBar/navbar.css
.navLi{
    display: inline;
    border: 5px solid white;
    }

.navLi:hover{
    color: black;
    background-color: rgb(107, 107, 156);
}

.navLiLink {
    color: rgb(46, 114, 122);
    text-decoration-line: none;
    text-shadow: rgba(46, 114, 122, 0.808);
}

